Update launch.sh